--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +28,7 @@
         }
 
         img {
-            max-width: 100%;
+            max-width: 200%;
             height: auto;
             margin-top: 20px;
         }
@@ -40,13 +38,17 @@
     <div class="container">
         <h1>Внимание! Проводятся технические работы</h1>
         <p>Извините за временные неудобства. Мы работаем над улучшением сервиса.</p>
-        <img src="https://exaple.gif" alt="Технические работы">
-        <audio controls autoplay volume="0.2" hidden loop id="audioPlayer">
-            <source src="https://exaple.mp3" type="audio/mpeg">
+        <img src="https://media.tenor.com/C84C_fqg7Y0AAAAi/pedro-dancing-racoon.gif" alt="Технические работы" style="
+    width: 350px;
+">
+        <audio controls="" autoplay="" volume="0.2" hidden="" loop="" id="audioPlayer">
+            <source src="https://muzvuz.net/uploads/files/2024-03/1710053357_muzboss_net_raffaella-carra-pedro-tiktok-remix.mp3" type="audio/mpeg">
         </audio>
     </div>
     <script>
-        document.getElementById("audioPlayer").volume = 0; // Устанавливаем громкость на минимальное значение (выключаем звук)
+        document.getElementById("audioPlayer").volume = 0.1; // Устанавливаем громкость на минимальное значение (выключаем звук)
     </script>
-</body>
-</html>
+
+
+
+</body></html>
